[gd_scene load_steps=13 format=2]

[ext_resource path="res://script_disparoD.gd" type="Script" id=1]
[ext_resource path="res://Imagens/animaçoes/shuri3.png" type="Texture" id=2]
[ext_resource path="res://Imagens/animaçoes/shuri6.png" type="Texture" id=3]
[ext_resource path="res://Imagens/animaçoes/shuri5.png" type="Texture" id=4]
[ext_resource path="res://Imagens/animaçoes/shuri4.png" type="Texture" id=5]
[ext_resource path="res://Imagens/animaçoes/shuri8.png" type="Texture" id=6]
[ext_resource path="res://Imagens/animaçoes/shuri1.png" type="Texture" id=7]
[ext_resource path="res://Imagens/animaçoes/shuri7.png" type="Texture" id=8]
[ext_resource path="res://Imagens/animaçoes/shuri2.png" type="Texture" id=9]
[ext_resource path="res://Imagens/sons/acerta_shuriken.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 4.86515

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "shurikenD",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="Disparo" type="Area2D" parent="."]
position = Vector2( 0, -9.53674e-07 )
scale = Vector2( 1.56, 1.56 )
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Disparo"]
position = Vector2( 1.19209e-07, 5.96046e-08 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Disparo"]
scale = Vector2( 0.734621, 0.734621 )
frames = SubResource( 2 )
animation = "shurikenD"
playing = true

[node name="Timer" type="Timer" parent="Disparo"]
wait_time = 1.5
autostart = true

[node name="AtingirShuri" type="AudioStreamPlayer" parent="Disparo"]
stream = ExtResource( 10 )
[connection signal="area_entered" from="Disparo" to="Disparo" method="_on_Disparo_area_entered"]
[connection signal="body_entered" from="Disparo" to="Disparo" method="_on_Disparo_body_entered"]
[connection signal="timeout" from="Disparo/Timer" to="Disparo" method="_on_Timer_timeout"]
[connection signal="finished" from="Disparo/AtingirShuri" to="Disparo" method="_on_AtingirShuri_finished"]
